--- a/index.mdx
+++ b/index.mdx
@@ -1,26 +1,26 @@
 ---
-title: "Cronhost Documentation"
+title: "cronhost Documentation"
 description: "Schedule HTTP requests with cron expressions. Simple, reliable, and powerful."
 ---
 
 <img
   className="block dark:hidden"
   src="/images/dashboard-light.jpg"
-  alt="Cronhost Hero Light"
+  alt="cronhost Hero Light"
 />
 <img
   className="hidden dark:block"
   src="/images/dashboard-dark.jpg"
-  alt="Cronhost Hero Dark"
+  alt="cronhost Hero Dark"
 />
 
-# Welcome to Cronhost
+# Welcome to cronhost
 
-Cronhost is a powerful service for scheduling HTTP requests using familiar cron syntax. Whether you need to trigger webhooks, monitor APIs, send notifications, or automate workflows, Cronhost makes it simple and reliable.
+cronhost is a powerful service for scheduling HTTP requests using familiar cron syntax. Whether you need to trigger webhooks, monitor APIs, send notifications, or automate workflows, cronhost makes it simple and reliable.
 
-## What is Cronhost?
+## What is cronhost?
 
-Cronhost allows you to:
+cronhost allows you to:
 
 - **Schedule HTTP requests** using standard cron expressions
 - **Monitor API health** with automatic retries and timeout handling
@@ -66,11 +66,7 @@ curl -X POST "https://cronho.st/api/v1/schedules" \
   >
     Use familiar cron syntax to schedule requests precisely
   </Card>
-  <Card
-    title="Global Timezones"
-    icon="globe"
-    href="/api-reference/introduction"
-  >
+  <Card title="Global Timezones" icon="globe" href="/timezones">
     Schedule across any timezone with IANA timezone support
   </Card>
   <Card
@@ -121,7 +117,7 @@ Send periodic notifications, reminders, or status updates by calling your notifi
   </Card>
 </CardGroup>
 
-## Why Choose Cronhost?
+## Why Choose cronhost?
 
 - **Reliable Execution**: Built on robust infrastructure with 99.9% uptime
 - **Global Scale**: Supports scheduling across all timezones worldwide
